# arguslm

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
arguslm/: __init__.py
arguslm/schemas/: alert.py  benchmark.py  model.py  monitoring.py
arguslm/server/: main.py
arguslm/server/api/: alerts.py  benchmarks.py  models.py  monitoring.py  providers.py
arguslm/server/core/: alert_evaluator.py  benchmark_engine.py  config.py  litellm_client.py  metrics.py  prompt_packs.py  security.py  throttle.py
arguslm/server/core/providers/: catalog.py
arguslm/server/db/: init.py
arguslm/server/discovery/: bedrock.py
arguslm/server/models/: base.py  benchmark.py  model.py  monitoring.py  provider.py
frontend/: .dockerignore  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/public/locales/: en.json  zh-CN.json
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/pages/: DashboardPage.tsx  ModelsPage.tsx  ProvidersPage.tsx  SettingsPage.tsx
tests/: conftest.py  test_alert_evaluator.py  test_api_alerts.py  test_api_benchmarks.py  test_api_models.py  test_api_monitoring.py  test_api_providers.py  test_benchmark_engine.py  test_e2e.py  test_export.py  test_litellm_client.py  test_main.py  test_model_operations.py  test_models.py  test_uptime.py
