[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arguslm"
version = "0.2.0"
description = "ArgusLM — Open-source LLM monitoring & benchmarking SDK"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Matthew Lien", email = "bluet@bluet.org"}]
keywords = ["llm", "benchmark", "monitoring", "performance", "litellm", "openai", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.11"

# SDK-only dependencies (lightweight — what `pip install arguslm` installs)
dependencies = [
    "httpx>=0.25.0,<1",
    "pydantic>=2.5.0,<3",
]

[project.optional-dependencies]
# WebSocket streaming support (for AsyncArgusLMClient.stream_benchmark)
ws = [
    "websockets>=12.0",
]
# Full server dependencies (what Docker/self-hosted deployment needs)
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "litellm>=1.83.7,<2",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    "apscheduler>=3.10.0",
    "boto3>=1.34.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/bluet/arguslm"
Documentation = "https://github.com/bluet/arguslm#readme"
Repository = "https://github.com/bluet/arguslm"
Issues = "https://github.com/bluet/arguslm/issues"

[tool.setuptools.packages.find]
include = ["arguslm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
