[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arguslm"
version = "0.3.3"
description = "ArgusLM — Open-source LLM monitoring & benchmarking SDK"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Matthew Lien", email = "bluet@bluet.org"}]
keywords = ["llm", "benchmark", "monitoring", "performance", "litellm", "openai", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.11"

# SDK-only dependencies (lightweight — what `pip install arguslm` installs)
dependencies = [
    "httpx>=0.28.1,<1",
    "pydantic>=2.11.0,<3",
]

[project.optional-dependencies]
# WebSocket streaming support (for AsyncArgusLMClient.stream_benchmark)
ws = [
    "websockets>=16.0",
]
# Full server dependencies (what Docker/self-hosted deployment needs)
server = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "litellm>=1.88.0,<2",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "cryptography>=48.0.0",
    "apscheduler>=3.11.0",
    "boto3>=1.43.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=2.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.0",
    "greenlet>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/bluet/arguslm"
Documentation = "https://github.com/bluet/arguslm#readme"
Repository = "https://github.com/bluet/arguslm"
Issues = "https://github.com/bluet/arguslm/issues"

[tool.setuptools.packages.find]
include = ["arguslm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
